# homepage

./: .gitignore  .statichost.yml  dune-project  homepage.opam  shell.nix  statichost.yml  statichost_build.sh
assets/: _redirects  talks.md
assets/css/: style.css
assets/pages/: index.md
assets/templates/: layout.html  page.html  talk.html  talks.html
